[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplangraph"
description = "Planning Graph in Python"  # <-- description from __description__.py
authors = [
    { name="Debby Nirwan", email="debby_nirwan@yahoo.com"},
    { name="Sebastian Sardina", email="ssardina@gmail.com" }
]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache License, Version 2.0" }
requires-python = ">=3.8"
dependencies = [
  "pydot", "antlr4-python3-runtime==4.7"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux"
]

# version = "0.1.2"  # <-- old static version
dynamic = ["version"]

# enable this if you want to generate the version from a file
# [tool.setuptools_scm]
# version_file = "fondutils/__version__.py"


[tool.setuptools_scm]
tag_regex = "^v(?P<version>.*)$"  # version tag regex v1.0.0 (with a v in front

[project.urls]
Homepage = "https://github.com/COSC1127-AI/planning_graph"  # or your about["__url__"]

[tool.setuptools.packages.find]
include = ["pygraphplan", "pygraphplan.pddlpy", "pygraphplan.planning_graph"]

[project.scripts]
fond-utils = "pygraphplan.__main__:main"
